# IICPC-TRACK3-Raj

./: .gitignore  README.md  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  requirements.txt
cli-tool/: behaviour_detector.py  cli-detector.py  cli_detector.py  vm_detector.py
frontend/: Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/dashboard/: EventFeed.tsx  RiskCharts.tsx  StatCard.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/user/: TelemetryGraph.tsx  UserDetailModal.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Health.tsx  Index.tsx  Sessions.tsx  Settings.tsx
frontend/src/types/: index.ts
vm-detection-system/: README.md  requirements.txt
vm-detection-system/agent/: ProctorAgent.spec  communicator.py  main.py
vm-detection-system/agent/detectors/: network_detector.py  remote_detector.py  screen_detector.py  system_forensics.py  vm_detector.py
vm-detection-system/docs/: Research Report -RAJ.docx
vm-detection-system/server/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py
vm-detection-system/server/engine/: fusion_engine.py
