[project]
name = "iicpc-dev-interns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.123.9",
    "numpy>=2.2.6",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pyinstaller>=6.17.0",
    "pynput>=1.8.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scapy>=2.6.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
